tests/baselines/reference/emptyVariableDeclarationBindingPatterns02_ES5.errors.txt
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(3,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(4,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(5,11): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(7,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(8,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts(9,11): error TS1182: A destructuring declaration must have an initializer.


==== tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5.ts (6 errors) ====
    
    (function () {
        var {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const {};
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    
        var [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const [];
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    })();